<resources>
    <string name="app_name">Flickr App</string>
    <string name="todo">TODO</string>

    <string name="title_activity_list">Images list</string>
    <string name="title_activity_preference">Settings</string>

    <string name="button_get_image">Get an image</string>
    <string name="button_goto_list">See images</string>
    <string name="button_goto_settings">Settings</string>

    <string name="settings_flickr">Flickr</string>
    <string name="settings_flickr_keyword_pref">Keyword to search on Flickr</string>
    <string name="settings_flickr_cache_pref">Enable caching of images?</string>
    <string name="settings_flickr_location">Use location in list?</string>

    <string name="toast_error_gps_permission">Location permission is required</string>
    <string name="image_label">Flickr image</string>
</resources>