<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_flickr">

        <EditTextPreference
            app:defaultValue="5c110e7aaec0ef3aef2e578673900648"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            app:key="flickrAPI" />

        <EditTextPreference
            app:defaultValue="shiba inu"
            app:iconSpaceReserved="false"
            app:key="keyword"
            app:title="@string/settings_flickr_keyword_pref"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="cache"
            app:title="@string/settings_flickr_cache_pref" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="location"
            app:title="@string/settings_flickr_location" />

    </PreferenceCategory>

</PreferenceScreen>